<resources>
    <string name="app_name">EatNow</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="create_account">Create Account</string>
    <string name="enter_full_name">Full name</string>
    <string name="enter_user_name" translatable="false">Username</string>
    <string name="enter_email" translatable="false">Email</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="enter_password" translatable="false">Password</string>
    <string name="enter_password_again">Password again</string>
    <string name="btn_next">Next</string>
    <string name="btn_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Other">Other</string>
    <string name="select_your_birthday">Select your birthday</string>
    <string name="btn_signup">Sign Up</string>
    <string name="onePerAll" translatable="false">1/3</string>
    <string name="twoPerAll" translatable="false">2/3</string>
    <string name="threePerAll" translatable="false">3/3</string>
    <string name="login">Login</string>
    <string name="eat_hit" translatable="false">Eat HIT</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="action_helps">Helps</string>
    <string name="action_chats">Chat</string>
    <string name="logout">Logout</string>
    <string name="qr_code" translatable="false">QR Code</string>
    <string name="tittle_select_friend">Select friends to invite</string>
    <string name="tittle_select_options">Enter your favorite</string>
    <string name="send_invitation1">Send your invitation</string>
    <string name="send_invitation2">Send your invitation (2/2)</string>
    <string name="facebook_app_id" translatable="false">510387363336471</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb510387363336471</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_message">Message</string>
    <string name="enter_code">Enter your friend code</string>
    <string name="result_connect">Result connect</string>
</resources>