<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_helps"
        android:orderInCategory="100"
        android:title="@string/action_helps"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_QRCode"
        android:orderInCategory="100"
        android:title="@string/qr_code"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/ic_baseline_chat_24"
        android:id="@+id/action_chats"
        android:orderInCategory="100"
        android:title="@string/action_chats"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/logout"
        android:id="@+id/action_logout"
        android:orderInCategory="100" />
</menu>