<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="30dp"
    tools:context=".common.fragment.SecondSignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnBackFirstSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleCreateAccount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProcess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/black_border"
                android:padding="35dp"
                android:text="@string/twoPerAll"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/Female" />

                <RadioButton
                    android:id="@+id/radioOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Other" />

            </RadioGroup>

            <View
                android:id="@+id/viewView"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvSelectDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_your_birthday"
                android:textSize="18sp" />

            <DatePicker
                android:id="@+id/dpBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarTextColor="@color/white"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:paddingBottom="20dp"
                android:spinnersShown="true" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNextToThirdSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_3"
            android:elevation="5dp"
            android:text="@string/btn_next"
            app:backgroundTint="@color/main_color" />

        <Button
            android:id="@+id/btnLoginOfSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_3"
            android:elevation="5dp"
            android:text="@string/btn_login"
            app:backgroundTint="@color/main_color" />

    </LinearLayout>

</ScrollView>