<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/origin"
android:padding="30dp"
tools:context=".common.fragment.ThirdSignupFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btnBackSecondSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/titleCreateAccount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvProcess"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:padding="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threePerAll"
            android:background="@drawable/black_border"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.hbb20.CountryCodePicker
            android:padding="5dp"
            android:id="@+id/cpp"
            app:ccp_showPhoneCode="true"
            app:ccp_showNameCode="true"
            app:ccp_showFullName="true"
            app:ccpDialog_showFlag="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:id="@+id/edtPhoneNumber"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:elevation="5dp"
        android:text="@string/btn_signup" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:text="@string/btn_login" />

</LinearLayout>

</RelativeLayout>