<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/origin"
    android:padding="30dp"
    tools:context=".common.fragment.FirstSignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnBackSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/titleCreateAccount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProcess"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:padding="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onePerAll"
                android:background="@drawable/black_border"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFullName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_edit_24"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_user_name"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:passwordToggleTint="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_password_24"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordAgain"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password_again"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:passwordToggleTint="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_password_24"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordAgain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnNextToSecondSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:elevation="5dp"
            android:text="@string/btn_next" />

        <Button
            android:id="@+id/btnLoginOfSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:elevation="5dp"
            android:text="@string/btn_login" />

    </LinearLayout>

</ScrollView>