<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/origin"
    android:padding="30dp"
    tools:context=".common.loginSignup.LoginActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/eat_hit"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgApp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/burger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgApp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_name"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/black"
            tools:layout_editor_absoluteY="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:passwordToggleTint="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_password_24"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="37dp"
                tools:layout_editor_absoluteY="195dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgot_password" />

        <TextView
            android:id="@+id/tvToSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/don_t_have_account" />
    </LinearLayout>

    <Button
        android:background="@color/white"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/white"
            android:elevation="35dp"
            android:src="@drawable/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSignUpWithGoogle"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSignUpWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/white"
            android:elevation="35dp"
            android:src="@drawable/google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/white"
            android:elevation="35dp"
            android:src="@drawable/twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/btnSignUpWithGoogle" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>